--- a/index.html
+++ b/index.html
@@ -10,17 +10,16 @@
 
   <body class="page">
     <header class="header">
-      <h1>Adivina el número</h1>
+      <h1 class="Title">Adivina el número</h1>
     </header>
-    
     <main>
       <form class="form">
         <label>Introduce aquí tu número:</label>
-        <input type="number" />
-        <input type="button" value="Prueba"  />
+        <input type="number" class="js-number" />
+        <input type="button" value="Prueba" class="js-button" />
       </form>
-      <p>Pista: Escribe un número y dale a Prueba</p>
-      <p>Número de intentos: 0</p>
+      <p class="js-pista">Pista: Escribe un número y dale a Prueba</p>
+      <p class="js-intentos">Número de intentos: 0</p>
     </main>
     <script type="text/javascript" src="./js/main.js"></script>
   </body>
